# ecs-game-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt  main.cpp
docs/: ecs_registry_design.md
src/: CMakeLists.txt
src/core/ecs/entity/: entity_id.hpp  entity_id_hash.hpp  entity_manager.cpp  entity_manager.hpp
src/core/ecs/registry/: registry.cpp  registry.hpp
src/core/ecs/storage/: component_storage.hpp  storage_manager.cpp  storage_manager.hpp
src/core/ecs/view/: view.hpp  view_iterator.hpp
src/core/entity/: entity_id.h  entity_id.hpp  entity_id_hash.h  entity_id_hash.hpp  entity_manager.cpp  entity_manager.h  entity_manager.hpp
src/core/event/: event_bus.hpp
src/core/manager/: system_manager.cpp  system_manager.hpp
src/core/math/: vec2.h  vec2.hpp
src/core/registry/: registry.cpp  registry.h  registry.hpp
src/core/render/: DummyRenderer.hpp  IRenderer.hpp  dummy_renderer.cpp  dummy_renderer.hpp
src/core/storage/: component_storage.cpp  component_storage.h  component_storage.hpp  storage_manager.cpp  storage_manager.h  storage_manager.hpp
src/core/system/: system_manager.cpp  system_manager.hpp
src/core/system/interface/: i_system_fixed_update.hpp  i_system_render.hpp  i_system_update.hpp
src/core/time/: Clock.cpp  Clock.h  Clock.hpp  clock.cpp
src/core/view/: view.h  view.hpp  view_iterator.h  view_iterator.hpp
src/game/: DummyRenderer.hpp  game.cpp  game.h  game.hpp  world.cpp  world.h
src/game/commands/: render_command.hpp
src/game/components/: camera.hpp  collider.hpp  enemy_tag.hpp  health.h  health.hpp  player_tag.hpp  position.h  position.hpp  range_attack.hpp  rigid_body.hpp  velocity.hpp
src/game/events/: damage_event.hpp  death_event.hpp
src/game/input/: dummy_keyboard.cpp  dummy_keyboard.hpp  input_action.hpp  input_context.hpp  input_device.hpp  input_state.hpp  input_system.cpp  input_system.hpp
src/game/spawn/: entity_factory.cpp  entity_factory.h  entity_factory.hpp
src/game/systems/: camera_system.cpp  camera_system.h  camera_system.hpp  lifetime_system.cpp  lifetime_system.h  movement_system.h  movements_system.cpp  render_system.cpp  render_system.h  render_system.hpp  system.h
src/game/systems/camera/: camera_system.cpp  camera_system.hpp
src/game/systems/gameplay/: ai_enemy_system.cpp  ai_enemy_system.hpp  attack_system.cpp  attack_system.hpp  collision_system.cpp  collision_system.hpp  cooldown_system.cpp  cooldown_system.hpp  health_system.cpp  health_system.hpp  lifetime_system.cpp  lifetime_system.hpp  movement_system.hpp  movements_system.cpp  player_control_system.cpp  player_control_system.hpp
src/game/systems/interfaces/: i_system_fixed_update.hpp  i_system_update.hpp
src/game/systems/reactive/: health_system.cpp  health_system.hpp  lifetime_system.cpp  lifetime_system.hpp
src/game/systems/render/: IRenderer.hpp  render_system.cpp  render_system.hpp
src/game/world/: world.cpp  world.h  world.hpp
src/input/: dummy_keyboard.cpp  dummy_keyboard.hpp  input_action.hpp  input_context.hpp  input_device.hpp  input_state.hpp  input_system.cpp  input_system.hpp
tests/: CMakeLists.txt  main.cpp
