add_library(ecs_core
        core/ecs/entity/entity_id.hpp
        core/ecs/entity/entity_manager.hpp
        core/ecs/entity/entity_manager.cpp
        core/ecs/registry/registry.hpp
        core/ecs/registry/registry.cpp
        core/ecs/storage/component_storage.hpp
        core/ecs/storage/storage_manager.hpp
        core/ecs/storage/storage_manager.cpp
        core/ecs/view/view.hpp
        core/ecs/view/view_iterator.hpp
        game/systems/gameplay/movement_system.hpp
        game/components/position.hpp
        game/components/velocity.hpp
        game/systems/gameplay/movements_system.cpp
        game/world/world.hpp
        game/game.hpp
        game/world/world.cpp
        game/game.cpp
        game/spawn/entity_factory.hpp
        game/spawn/entity_factory.cpp
        core/ecs/entity/entity_id_hash.hpp
        game/systems/gameplay/lifetime_system.hpp
        game/systems/gameplay/lifetime_system.cpp
        game/components/health.hpp
        core/time/clock.hpp
        core/time/Clock.cpp
        core/math/vec2.hpp
        game/systems/render/render_system.hpp
        game/systems/render/render_system.cpp
        game/systems/camera/camera_system.hpp
        game/systems/camera/camera_system.cpp
        game/components/camera.hpp
        game/commands/render_command.hpp
        core/render/IRenderer.hpp
        core/render/DummyRenderer.hpp
        input/input_action.hpp
        input/input_state.hpp
        input/input_device.hpp
        input/input_context.hpp
        input/dummy_keyboard.hpp
        input/dummy_keyboard.cpp
        input/input_system.hpp
        input/input_system.cpp
        game/systems/gameplay/player_control_system.hpp
        game/systems/gameplay/player_control_system.cpp
        game/components/player_tag.hpp
        core/manager/system_manager.hpp
        game/systems/interfaces/ISystemUpdate.hpp
)

target_include_directories(ecs_core
        PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/core

)

target_compile_options(ecs_core PRIVATE
        $<$<CXX_COMPILER_ID:GNU,Clang>:-Wall -Wextra -Wpedantic>
        $<$<CXX_COMPILER_ID:MSVC>:/W4>
)
